2016-02-13  Mark Wielaard  <mjw@redhat.com>

	* linux-proc-maps.c (proc_maps_report): Free last_file when ENOEXEC.

2016-02-13  Mark Wielaard  <mjw@redhat.com>

	* frame_unwind.c (new_unwound): Check and return unwound.
	(handle_cfi): Check new_unwound was able to allocate new memory
	before use. Return DWFL_E_NOMEM otherwise.

2016-02-11  Mark Wielaard  <mjw@redhat.com>

	* relocate.c (relocate_section): Check result of all gelf_get* calls.
	(__libdwfl_relocate): Likewise.
	(__libdwfl_relocate_section): Likewise.

2016-02-11  Mark Wielaard  <mjw@redhat.com>

	* relocate.c (relocate_section): Check result of gelf_update_* calls.

2016-01-08  Mark Wielaard  <mjw@redhat.com>

	* libdwfl_a_SOURCES: Unconditionally add gzip.c.
	* linux-kernel-modules.c (vmlinux_suffixes): We always have at least
	.gz support.
	(try_kernel_name): Likewise.
	(check_suffix): Likewise.
	* open.c (decompress): Likewise.

2015-12-18  Mark Wielaard  <mjw@redhat.com>

	* dwfl_module_getdwarf.c (find_symtab): Uncompress symstr, xndx, sym
	sections and aux_str, aux_xndx and aux_sym sections if necessary.
	* relocate.c (relocate_getsym): Uncompress symtab and symtab_shndx
	if necessary.
	(resolve_symbol): Uncompress strtab section if necessary.
	(relocate_section): Uncompress the section the relocations apply to
	if necessary.

2015-11-18  Chih-Hung Hsieh <chh@google.com>

	* linux-proc-maps.c (proc_maps_report): Move nested function
	'report' to file scope.

2015-11-18  Chih-Hung Hsieh <chh@google.com>

	* core-file.c (elf_begin_rand): Move nested function 'fail' to file
	scope.
	* core-file.c (dwfl_elf_phdr_memory_callback): Move nested functions
	'update_end' and 'more' to file scope.

2015-11-17  Chih-Hung Hsieh <chh@google.com>

	* link_map.c (auxv_format_probe): Move nested functions
	check64 and check32 to file scope.

2015-12-08  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* dwfl_frame.c (state_fetch_pc): Add a backend-defined offset to